@@ -1,3 +1,7 @@
+2009-09-23  Matthew Gingell  <gingell@adacore.com>
+
+	* cplus-dem.c (ada_demangle): Ensure demangled is freed.
+
 2009-09-15  Tristan Gingold  <gingold@adacore.com>
 
 	* config.h-vms (intptr_t): Define to compile hashtab.c
